--- a/volumes/logstash/pipeline/from-scratch.conf
+++ b/volumes/logstash/pipeline/from-scratch.conf
@@ -1,6 +1,6 @@
 input {
   jdbc {
-    jdbc_driver_library => "/usr/share/logstash/mysql-connector-java-8.0.22.jar"
+    jdbc_driver_library => "/usr/share/sync-elasticsearch-mysql/mysql-connector-java-8.0.22.jar"
     jdbc_driver_class => "com.mysql.jdbc.Driver"
     jdbc_connection_string => "jdbc:mysql://mysql:3306"
     jdbc_user => "avid_reader"
@@ -8,7 +8,7 @@ input {
     sql_log_level => "debug"  # Set Logstash logging level as this
     clean_run => true # Set to true for indexing from scratch
     record_last_run => false
-    statement_filepath => "/usr/share/logstash/config/queries/from-scratch.sql"
+    statement_filepath => "/usr/share/sync-elasticsearch-mysql/volumes/logstash/config/queries"
   }
 }
 
